Add Prefect workflow and scheduling

--- a/01_fetch_data.ipynb
+++ b/01_fetch_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "acting-wellington",
+   "id": "danish-ladder",
    "metadata": {},
    "source": [
     "# Fetch bitcoin data"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "known-physiology",
+   "id": "worldwide-enhancement",
    "metadata": {
     "tags": []
    },
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "romance-israel",
+   "id": "corporate-leone",
    "metadata": {
     "tags": [
      "parameters"
@@ -48,31 +48,31 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "micro-theorem",
+   "id": "norwegian-arrow",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Program defined constants\n",
-    "OUTPUT_DIR = Path(os.path.join(DATA_DIR, OUTPUT_DIRNAME, START_DATE))\n",
+    "OUTPUT_DIR = Path(os.path.join(DATA_DIR, OUTPUT_DIRNAME, EXECUTION_DATE))\n",
     "OUTPUT_DIR.mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "lucky-sierra",
+   "id": "aging-offer",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Fetch data from Yahoo Finance\n",
     "btc = yf.Ticker(BTC_TICKER)\n",
-    "btc_df = btc.history(start=START_DATE).loc[[START_DATE]]"
+    "btc_df = btc.history(start=EXECUTION_DATE).loc[[EXECUTION_DATE]]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "polished-philadelphia",
+   "id": "official-round",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "spectacular-planning",
+   "id": "ahead-theta",
    "metadata": {},
    "outputs": [],
    "source": [
