--- a/02_transform_data.ipynb
+++ b/02_transform_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "suffering-union",
+   "id": "common-spanish",
    "metadata": {},
    "source": [
     "# Transform data"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "illegal-bradford",
+   "id": "registered-university",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fitted-desktop",
+   "id": "pediatric-router",
    "metadata": {
     "tags": [
      "parameters"
@@ -49,20 +49,20 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "split-seven",
+   "id": "controversial-arrest",
    "metadata": {},
    "outputs": [],
    "source": [
     "# System\n",
-    "INPUT_DIR = os.path.join(DATA_DIR, INPUT_DIRNAME, START_DATE)\n",
-    "OUTPUT_DIR = Path(os.path.join(DATA_DIR, OUTPUT_DIRNAME, START_DATE))\n",
+    "INPUT_DIR = os.path.join(DATA_DIR, INPUT_DIRNAME, EXECUTION_DATE)\n",
+    "OUTPUT_DIR = Path(os.path.join(DATA_DIR, OUTPUT_DIRNAME, EXECUTION_DATE))\n",
     "OUTPUT_DIR.mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "revised-creek",
+   "id": "organic-supply",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "every-domestic",
+   "id": "loved-effectiveness",
    "metadata": {},
    "outputs": [],
    "source": [
