Use prophet and gradient boosting

--- a/03_predictions.ipynb
+++ b/03_predictions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "precise-rider",
+   "id": "double-showcase",
    "metadata": {},
    "source": [
     "# Prediction for N+1, N+7, N+30"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "norwegian-terry",
+   "execution_count": null,
+   "id": "differential-surrey",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,8 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "warming-cisco",
+   "execution_count": null,
+   "id": "patient-collective",
    "metadata": {
     "tags": [
      "parameters"
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "# Constants\n",
-    "MODEL_PATH = \"artifacts/2021-03-14/\"\n",
+    "MODEL_PATH = \"artifacts/2021-03-18/\"\n",
     "MODEL_NAME = \"LinearRegression\"\n",
     "MODEL_EXTENSION = \".joblib\"\n",
     "DATA_DIR = \"data\"\n",
@@ -44,18 +44,18 @@
     "INPUT_DIRNAME = \"02_clean\"\n",
     "INPUT_FILENAME = \"clean_data.csv\"\n",
     "OUTPUT_DIRNAME = \"03_predictions\"\n",
-    "OUTPUT_FILENAME = \"predictions.csv\"\n",
+    "OUTPUT_FILENAME = \"predictions_linear_regression.csv\"\n",
     "DAY_PLUS_1 = \"DAY_PLUS_1\"\n",
     "DAY_PLUS_7 = \"DAY_PLUS_7\"\n",
     "DAY_PLUS_30 = \"DAY_PLUS_30\"\n",
-    "EXECUTION_DATE = \"2021-02-13\"\n",
-    "NB_DAYS = 5"
+    "EXECUTION_DATE = \"2021-02-25\"\n",
+    "NB_DAYS = 7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "third-source",
+   "execution_count": null,
+   "id": "outstanding-sense",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,8 +73,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "finished-newman",
+   "execution_count": null,
+   "id": "visible-impact",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,8 +89,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "bacterial-london",
+   "execution_count": null,
+   "id": "emotional-champagne",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,8 +100,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "opponent-blanket",
+   "execution_count": null,
+   "id": "hungarian-index",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,43 +114,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "informative-notice",
+   "execution_count": null,
+   "id": "fabulous-count",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = get_data_for_prediction(data_df, EXECUTION_DATE, 5)"
+    "df = get_data_for_prediction(data_df, EXECUTION_DATE, NB_DAYS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "attached-banana",
+   "execution_count": null,
+   "id": "sealed-skirt",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = df.sort_index(ascending=False).values.reshape((1, 5))"
+    "x = df.sort_index(ascending=False).values.reshape((1, NB_DAYS))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "governmental-reward",
+   "execution_count": null,
+   "id": "pointed-adaptation",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load models artifacts\n",
-    "model_plus_1 = load(os.path.join(MODEL_PATH, DAY_PLUS_1, \"LinearRegression.joblib\"))\n",
+    "model_plus_1 = load(os.path.join(MODEL_PATH, DAY_PLUS_1, MODEL_NAME+MODEL_EXTENSION))\n",
     "\n",
-    "model_plus_7 = load(os.path.join(MODEL_PATH, DAY_PLUS_7, \"LinearRegression.joblib\"))\n",
+    "model_plus_7 = load(os.path.join(MODEL_PATH, DAY_PLUS_7, MODEL_NAME+MODEL_EXTENSION))\n",
     "\n",
-    "model_plus_30 = load(os.path.join(MODEL_PATH, DAY_PLUS_30, \"LinearRegression.joblib\"))"
+    "model_plus_30 = load(os.path.join(MODEL_PATH, DAY_PLUS_30, MODEL_NAME+MODEL_EXTENSION))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "complex-looking",
+   "execution_count": null,
+   "id": "psychological-saint",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,8 +162,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "controlled-oakland",
+   "execution_count": null,
+   "id": "blocked-automation",
    "metadata": {},
    "outputs": [],
    "source": [
