--- a/_train_model_prophet.ipynb
+++ b/_train_model_prophet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "warming-female",
+   "id": "banner-corporation",
    "metadata": {},
    "source": [
     "# Train model"
@@ -11,24 +11,24 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "acceptable-outreach",
+   "id": "running-suicide",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.base import TransformerMixin\n",
+    "from fbprophet import Prophet\n",
     "import pandas as pd\n",
     "import os\n",
     "from joblib import dump, load\n",
     "import datetime\n",
     "from pathlib import Path\n",
-    "import ipdb"
+    "import json\n",
+    "from fbprophet.serialize import model_to_json, model_from_json"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "adapted-liability",
+   "id": "auburn-tenant",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,56 +36,38 @@
     "INPUT_DIRNAME = \"02_clean\"\n",
     "INPUT_FILENAME = \"clean_data.csv\"\n",
     "OUTPUT_DIRNAME = \"artifacts\"\n",
-    "NB_DAYS_TO_TRAIN = 5\n",
-    "EXECUTION_DATE = datetime.datetime.now()\n",
-    "DATE_FORMAT = \"%Y-%m-%d\"\n",
-    "DAY_PLUS_1 = \"DAY_PLUS_1\"\n",
-    "DAY_PLUS_7 = \"DAY_PLUS_7\"\n",
-    "DAY_PLUS_30 = \"DAY_PLUS_30\""
+    "OUTPUT_FILENAME = \"prophet.json\"\n",
+    "EXECUTION_DATE = pd.to_datetime(\"2021-03-18\")\n",
+    "DATE_FORMAT = \"%Y-%m-%d\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "sophisticated-smoke",
+   "id": "acceptable-article",
    "metadata": {},
    "outputs": [],
    "source": [
-    "OUTPUT_DIR_1 = Path(os.path.join(OUTPUT_DIRNAME, EXECUTION_DATE.strftime(DATE_FORMAT), DAY_PLUS_1))\n",
-    "OUTPUT_DIR_7 = Path(os.path.join(OUTPUT_DIRNAME, EXECUTION_DATE.strftime(DATE_FORMAT), DAY_PLUS_7))\n",
-    "OUTPUT_DIR_30 = Path(os.path.join(OUTPUT_DIRNAME, EXECUTION_DATE.strftime(DATE_FORMAT), DAY_PLUS_30))\n",
-    "OUTPUT_DIR_1.mkdir(parents=True, exist_ok=True)\n",
-    "OUTPUT_DIR_7.mkdir(parents=True, exist_ok=True)\n",
-    "OUTPUT_DIR_30.mkdir(parents=True, exist_ok=True)"
+    "OUTPUT_DIR = Path(os.path.join(OUTPUT_DIRNAME, EXECUTION_DATE.strftime(DATE_FORMAT)))\n",
+    "OUTPUT_DIR.mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "secure-architecture",
+   "id": "general-robin",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_all_available_data(path: str) -> pd.DataFrame:\n",
-    "    dataframes = [pd.read_csv(os.path.join(path, name, INPUT_FILENAME)) for name in os.listdir(path) if \".\" not in name]\n",
+    "def load_all_available_data_before_date(path: str) -> pd.DataFrame:\n",
+    "    dataframes = [pd.read_csv(os.path.join(path, name, INPUT_FILENAME)) for name in os.listdir(path) if \".\" not in name and pd.to_datetime(name) <= EXECUTION_DATE]\n",
     "    return pd.concat(dataframes, ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "successful-pound",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load data\n",
-    "data = load_all_available_data(os.path.join(DATA_DIR, INPUT_DIRNAME))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "defensive-concord",
+   "id": "another-leonard",
    "metadata": {},
    "outputs": [
     {
@@ -109,201 +91,118 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
+       "      <th>ds</th>\n",
+       "      <th>y</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2021-02-07</th>\n",
-       "      <td>38903.441406</td>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>29374.152344</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-02-08</th>\n",
-       "      <td>46196.464844</td>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-01-02</td>\n",
+       "      <td>32127.267578</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-02-09</th>\n",
-       "      <td>46481.105469</td>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-01-03</td>\n",
+       "      <td>32782.023438</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-02-10</th>\n",
-       "      <td>44918.183594</td>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-01-04</td>\n",
+       "      <td>31971.914062</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-02-11</th>\n",
-       "      <td>47909.332031</td>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-01-05</td>\n",
+       "      <td>33992.429688</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-02-12</th>\n",
-       "      <td>47504.851562</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-02-13</th>\n",
-       "      <td>47105.515625</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-02-14</th>\n",
-       "      <td>48717.289062</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-02-15</th>\n",
-       "      <td>47945.058594</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-02-16</th>\n",
-       "      <td>49199.871094</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-02-17</th>\n",
-       "      <td>52149.007812</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-02-18</th>\n",
-       "      <td>51679.796875</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-02-19</th>\n",
-       "      <td>55888.132812</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-02-20</th>\n",
-       "      <td>56099.519531</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-02-21</th>\n",
-       "      <td>57539.945312</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-02-22</th>\n",
-       "      <td>54207.320312</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-02-23</th>\n",
-       "      <td>48824.425781</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-02-24</th>\n",
-       "      <td>49705.332031</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-02-25</th>\n",
-       "      <td>47093.851562</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-02-26</th>\n",
-       "      <td>46339.761719</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-02-27</th>\n",
-       "      <td>46188.453125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-02-28</th>\n",
-       "      <td>45137.769531</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-01</th>\n",
-       "      <td>49631.242188</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-02</th>\n",
-       "      <td>48378.988281</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-03</th>\n",
-       "      <td>50538.242188</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-04</th>\n",
-       "      <td>48561.167969</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-05</th>\n",
-       "      <td>48927.304688</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-06</th>\n",
-       "      <td>48912.382812</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-07</th>\n",
-       "      <td>51206.691406</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-08</th>\n",
-       "      <td>52246.523438</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-09</th>\n",
-       "      <td>54824.117188</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-10</th>\n",
-       "      <td>56008.550781</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-11</th>\n",
-       "      <td>57805.121094</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-12</th>\n",
-       "      <td>57332.089844</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-13</th>\n",
-       "      <td>61243.085938</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-03-14</th>\n",
+       "      <th>72</th>\n",
+       "      <td>2021-03-14</td>\n",
        "      <td>59844.519531</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>2021-03-15</td>\n",
+       "      <td>55907.199219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>2021-03-16</td>\n",
+       "      <td>56304.406250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>2021-03-17</td>\n",
+       "      <td>55904.730469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>2021-03-18</td>\n",
+       "      <td>57858.921875</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>77 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   value\n",
-       "Date                    \n",
-       "2021-02-07  38903.441406\n",
-       "2021-02-08  46196.464844\n",
-       "2021-02-09  46481.105469\n",
-       "2021-02-10  44918.183594\n",
-       "2021-02-11  47909.332031\n",
-       "2021-02-12  47504.851562\n",
-       "2021-02-13  47105.515625\n",
-       "2021-02-14  48717.289062\n",
-       "2021-02-15  47945.058594\n",
-       "2021-02-16  49199.871094\n",
-       "2021-02-17  52149.007812\n",
-       "2021-02-18  51679.796875\n",
-       "2021-02-19  55888.132812\n",
-       "2021-02-20  56099.519531\n",
-       "2021-02-21  57539.945312\n",
-       "2021-02-22  54207.320312\n",
-       "2021-02-23  48824.425781\n",
-       "2021-02-24  49705.332031\n",
-       "2021-02-25  47093.851562\n",
-       "2021-02-26  46339.761719\n",
-       "2021-02-27  46188.453125\n",
-       "2021-02-28  45137.769531\n",
-       "2021-03-01  49631.242188\n",
-       "2021-03-02  48378.988281\n",
-       "2021-03-03  50538.242188\n",
-       "2021-03-04  48561.167969\n",
-       "2021-03-05  48927.304688\n",
-       "2021-03-06  48912.382812\n",
-       "2021-03-07  51206.691406\n",
-       "2021-03-08  52246.523438\n",
-       "2021-03-09  54824.117188\n",
-       "2021-03-10  56008.550781\n",
-       "2021-03-11  57805.121094\n",
-       "2021-03-12  57332.089844\n",
-       "2021-03-13  61243.085938\n",
-       "2021-03-14  59844.519531"
+       "            ds             y\n",
+       "0   2021-01-01  29374.152344\n",
+       "1   2021-01-02  32127.267578\n",
+       "2   2021-01-03  32782.023438\n",
+       "3   2021-01-04  31971.914062\n",
+       "4   2021-01-05  33992.429688\n",
+       "..         ...           ...\n",
+       "72  2021-03-14  59844.519531\n",
+       "73  2021-03-15  55907.199219\n",
+       "74  2021-03-16  56304.406250\n",
+       "75  2021-03-17  55904.730469\n",
+       "76  2021-03-18  57858.921875\n",
+       "\n",
+       "[77 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load data\n",
+    "data = load_all_available_data_before_date(os.path.join(DATA_DIR, INPUT_DIRNAME))\n",
+    "data = data.rename(columns={\"Date\": \"ds\", \"Close\": \"y\"}).sort_values(\"ds\").reset_index(drop=True)\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "political-pioneer",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:fbprophet:Disabling yearly seasonality. Run prophet with yearly_seasonality=True to override this.\n",
+      "INFO:fbprophet:Disabling daily seasonality. Run prophet with daily_seasonality=True to override this.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<fbprophet.forecaster.Prophet at 0x7fa9f8676fd0>"
       ]
      },
      "execution_count": 6,
@@ -312,96 +211,19 @@
     }
    ],
    "source": [
-    "data = data.set_index(\"Date\").rename(columns={\"Close\": \"value\"}).sort_index()\n",
-    "data"
+    "model = Prophet()\n",
+    "model.fit(data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "worth-brain",
+   "id": "married-teaching",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class PastDataSetter(TransformerMixin):\n",
-    "    \n",
-    "    PAST_COLUMN_NAME = \"value_minus_\"\n",
-    "    NEW_COL_NAME = \"target\"\n",
-    "    \n",
-    "    def __init__(self, data_column=\"value\", nb_days_to_set=30, delay=1):\n",
-    "        self.data_column = data_column\n",
-    "        self.nb_days_to_set = nb_days_to_set\n",
-    "        self.delay = delay\n",
-    "    \n",
-    "    def fit(self, X, y=None):\n",
-    "        return self\n",
-    "    \n",
-    "    def transform(self, X):\n",
-    "        result = X.copy()\n",
-    "        for day in range(self.delay, self.delay + self.nb_days_to_set):\n",
-    "            result[self.PAST_COLUMN_NAME + str(day)] = X[self.data_column].shift(day)\n",
-    "        result = result.dropna()\n",
-    "        result = result.rename(columns={self.data_column: self.NEW_COL_NAME})\n",
-    "        y = result[self.NEW_COL_NAME].values\n",
-    "        X = result.drop([self.NEW_COL_NAME], axis=1).values\n",
-    "        return X, y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "novel-topic",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "setter_1 = PastDataSetter(nb_days_to_set=NB_DAYS_TO_TRAIN, delay=1)\n",
-    "setter_7 = PastDataSetter(nb_days_to_set=NB_DAYS_TO_TRAIN, delay=7)\n",
-    "setter_30 = PastDataSetter(nb_days_to_set=NB_DAYS_TO_TRAIN, delay=30)\n",
-    "\n",
-    "X_plus_1, y_plus_1 = setter_1.fit_transform(data)\n",
-    "X_plus_7, y_plus_7 = setter_7.fit_transform(data)\n",
-    "X_plus_30, y_plus_30 = setter_30.fit_transform(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "confirmed-worst",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Train the model\n",
-    "lin_reg_plus_1 = LinearRegression().fit(X_plus_1, y_plus_1)\n",
-    "lin_reg_plus_7 = LinearRegression().fit(X_plus_7, y_plus_7)\n",
-    "lin_reg_plus_30 = LinearRegression().fit(X_plus_30, y_plus_30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "advanced-laundry",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['artifacts/2021-03-14/DAY_PLUS_30/LinearRegression.joblib']"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dump(setter_1, os.path.join(OUTPUT_DIR_1, \"%s.joblib\" % setter_1.__class__.__name__))\n",
-    "dump(lin_reg_plus_1, os.path.join(OUTPUT_DIR_1, \"%s.joblib\" % lin_reg_plus_1.__class__.__name__))\n",
-    "\n",
-    "dump(setter_7, os.path.join(OUTPUT_DIR_7, \"%s.joblib\" % setter_7.__class__.__name__))\n",
-    "dump(lin_reg_plus_7, os.path.join(OUTPUT_DIR_7, \"%s.joblib\" % lin_reg_plus_7.__class__.__name__))\n",
-    "\n",
-    "dump(setter_30, os.path.join(OUTPUT_DIR_30, \"%s.joblib\" % setter_30.__class__.__name__))\n",
-    "dump(lin_reg_plus_30, os.path.join(OUTPUT_DIR_30, \"%s.joblib\" % lin_reg_plus_30.__class__.__name__))"
+    "with open(os.path.join(OUTPUT_DIR, OUTPUT_FILENAME), 'w') as smodel:\n",
+    "    json.dump(model_to_json(model), smodel)"
    ]
   }
  ],
