--- a/01_fetch_data.ipynb
+++ b/01_fetch_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "danish-ladder",
+   "id": "pressed-entrance",
    "metadata": {},
    "source": [
     "# Fetch bitcoin data"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "worldwide-enhancement",
+   "id": "incoming-turner",
    "metadata": {
     "tags": []
    },
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "corporate-leone",
+   "id": "australian-matthew",
    "metadata": {
     "tags": [
      "parameters"
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "norwegian-arrow",
+   "id": "efficient-summit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "aging-offer",
+   "id": "dominant-hurricane",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "official-round",
+   "id": "waiting-rapid",
    "metadata": {},
    "outputs": [
     {
@@ -152,12 +152,28 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ahead-theta",
+   "id": "golden-mechanism",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save to data folder\n",
     "btc_df.to_csv(os.path.join(OUTPUT_DIR, OUTPUT_FILENAME))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "designing-furniture",
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# parameter cell\n",
+    "alpha = 0.1\n",
+    "beta = 0.2"
    ]
   }
  ],
